--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-GROQ_API_KEY="YOUR_GROQ_API_KEY"
+GROQ_API_KEY="your-groq-api-key"
+NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project-url.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
